--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,9 @@ jobs:
         tags: ${{ secrets.DOCKER_USERNAME }}/nombre-imagen:latest
 
     - name: Deploy to provider (e.g., Heroku)
-      run: 
-          heroku container:login
-          heroku container:push web -a app-vulnerable2
-          heroku container:release web -a tu-app-en-heroku
+      run: |
+           docker context create heroku-context
+           docker context use heroku-context
+           heroku container:login
+           heroku container:push web -a app-vulnerable2
+           heroku container:release web -a tu-app-en-heroku
