--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,11 +24,17 @@ jobs:
         push: true
         tags: ${{ secrets.DOCKER_USERNAME }}/nombre-imagen:latest
 
-    - name: Deploy to Heroku
-      uses: AkhileshNS/heroku-deploy@v3.12.12
+   # --- Este es el nuevo paso para instalar la CLI de Heroku ---
+    - name: Setup Heroku CLI
+      uses: heroku/actions/setup@v3.0.4
       with:
-        heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        heroku_app_name: "app-vulnerable2" # Reemplaza con el nombre de tu app
-        heroku_email: ${{secrets.HEROKU_EMAIL}}
-        docker_heroku_process_type: "web"
-    
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+
+    # --- Y ahora puedes usar el comando heroku ---
+    - name: Deploy to Heroku
+      run: |
+        #heroku create tu-app-en-heroku # Crea la aplicación
+        heroku container:login
+        heroku container:push web -a app-vulnerable2
+        heroku container:release web -a app-vulnerable2
+  
