--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,15 +25,14 @@ jobs:
         tags: ${{ secrets.DOCKER_USERNAME }}/nombre-imagen:latest
 
    # --- Este es el nuevo paso para instalar la CLI de Heroku ---
-    - name: Setup Heroku CLI
-      uses: heroku/actions/setup@v3.0.4
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+    - name: Install Heroku CLI
+      run: |
+        # Comando para instalar la CLI de Heroku
+        curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
 
     # --- Y ahora puedes usar el comando heroku ---
     - name: Deploy to Heroku
       run: |
-        #heroku create tu-app-en-heroku # Crea la aplicación
         heroku container:login
         heroku container:push web -a app-vulnerable2
         heroku container:release web -a app-vulnerable2
