--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,38 +2,38 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/nombre-imagen:latest
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/vulnerable-app25:latest
 
-   # --- Este es el nuevo paso para instalar la CLI de Heroku ---
-    - name: Install Heroku CLI
-      run: |
-        # Comando para instalar la CLI de Heroku
-        curl https://cli-assets.heroku.com/install-ubuntu.sh | sh
+      # --- Este es el nuevo paso para instalar la CLI de Heroku ---
+      - name: Setup Heroku CLI
+        uses: heroku/actions/setup@v3.0.4
+        with:
+          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
 
-    # --- Y ahora puedes usar el comando heroku ---
-    - name: Deploy to Heroku
-      run: |
-        heroku container:login
-        heroku container:push web -a app-vulnerable2
-        heroku container:release web -a app-vulnerable2
+      # --- Y ahora puedes usar el comando heroku ---
+      - name: Deploy to Heroku
+        run: |
+          heroku container:login
+          heroku container:push web -a app-vulnerable2
+          heroku container:release web -a app-vulnerable2
   
