--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,39 +1,25 @@
-name: CI/CD Pipeline
+name: Deploy to Heroku
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master # Or your deployment branch
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Install Heroku CLI
+        uses: ynab/heroku-cli-action@v1
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/vulnerable-app25:latest
-
-      # --- Este es el nuevo paso para instalar la CLI de Heroku ---
-      - name: Setup Heroku CLI
-        uses: heroku/actions/setup@v2.0.4
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-
-      # --- Y ahora puedes usar el comando heroku ---
       - name: Deploy to Heroku
+        #run: git push https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/app-vulnerable2.git HEAD:master
+        # Or for container deployment:
         run: |
-          heroku container:login
-          heroku container:push web -a app-vulnerable2
-          heroku container:release web -a app-vulnerable2
-  
+         heroku container:login
+         heroku container:push web -a your-app-name
+         heroku container:release web -a your-app-name
+        env:
+          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
